# adex-protocol-substrate

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: chain_spec.rs  cli.yml
runtime/: Cargo.toml
runtime/src/: adex_outpace.rs  adex_v3.rs  demo.rs  lib.rs
runtime/src/adex_outpace/: channel.rs  mod.rs
runtime/wasm/: Cargo.toml  build.sh
src/: chain_spec.rs  cli.yml  main.rs  service.rs
