[package]
name = "node-runtime"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]

[dependencies]
rustc-hex = "1.0"
hex-literal = "0.1.0"
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false }
parity-codec = "2.1"
parity-codec-derive = "2.1"
sr-api = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sr-std = { git = "https://github.com/paritytech/substrate", branch = "master" }
sr-io = { git = "https://github.com/paritytech/substrate", branch = "master" }
srml-support = { git = "https://github.com/paritytech/substrate", branch = "master" }
substrate-primitives = { git = "https://github.com/paritytech/substrate", branch = "master" }
substrate-keyring = { git = "https://github.com/paritytech/substrate", branch = "master" }
srml-balances = { git = "https://github.com/paritytech/substrate", branch = "master" }
srml-consensus = { git = "https://github.com/paritytech/substrate", branch = "master" }
srml-executive = { git = "https://github.com/paritytech/substrate", branch = "master" }
sr-primitives = { git = "https://github.com/paritytech/substrate", branch = "master" }
srml-system = { git = "https://github.com/paritytech/substrate", branch = "master" }
srml-timestamp = { git = "https://github.com/paritytech/substrate", branch = "master" }
srml-upgrade-key = { git = "https://github.com/paritytech/substrate", branch = "master" }
substrate-client = { git = "https://github.com/paritytech/substrate", branch = "master", optional = true }
sr-version = { git = "https://github.com/paritytech/substrate", branch = "master" }

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"substrate-primitives/std",
	"sr-api/std",
	"sr-std/std",
	"sr-io/std",
	"srml-support/std",
	"srml-balances/std",
	"srml-consensus/std",
	"srml-executive/std",
	"sr-primitives/std",
	"srml-system/std",
	"srml-timestamp/std",
	"srml-upgrade-key/std",
	"sr-version/std",
	"serde_derive",
	"serde/std",
	"safe-mix/std",
	"substrate-client"
]
